syntax = "proto3";

package com.coursework.notification;

// Сервис для уведомлений и генерации PDF
service NotificationService {
  rpc SendNotification(NotificationRequest) returns (NotificationResponse);
  rpc GetNotifications(NotificationHistoryRequest) returns (NotificationHistoryResponse);
  rpc GeneratePdf(GeneratePdfRequest) returns (GeneratePdfResponse);
}

// Запрос для отправки уведомления
message NotificationRequest {
  string userId = 1;
  string message = 2;
}

// Ответ на отправку уведомления
message NotificationResponse {
  bool success = 1;
}

// Запрос на получение истории уведомлений
message NotificationHistoryRequest {
  string userId = 1;
}

// Ответ с историей уведомлений
message NotificationHistoryResponse {
  repeated string notifications = 1;
}

// Запрос для генерации PDF
message GeneratePdfRequest {
  repeated TripDTO trips = 1;
}

// Ответ с сгенерированным PDF
message GeneratePdfResponse {
  bytes pdfFile = 1; // PDF в виде массива байтов
}

// Данные о поездке
message TripDTO {
  int64 id = 1;
  int64 clientId = 2;
  int64 driverId = 3;
  int64 carId = 4;
  int64 companyId = 5;
  int64 tariffId = 6;
  double driverRate = 7;
  double clientRate = 8;
  string service = 9;
  string price = 10; // Используем строку для BigDecimal
  string startDate = 11; // ISO-формат
  string endDate = 12; // ISO-формат
}
